More OpenAPI work
